<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World!</string>
	<string name="app_name">ListViewTable</string>
	
	<string name="dummy">Dummy</string>

	<string name="header_text1">h 1</string>
	<string name="header_text2">h 2</string>
	<string name="header_text3">h 3</string>
	<string name="action_settings">setting</string>
	<string name="header_id">id</string>
	<string name="header_title">title</string>
	<string name="header_category">category</string>
	<string name="header_level">level</string>
	<string name="header_description">description</string>
	<string name="header_rule">rule</string>
	<string name="header_enable">是否开启</string>
	<string name="first_page">首页</string>
	<string name="previous_page">上一页</string>
	<string name="next_page">下一页</string>
	<string name="last_page">最后一页</string>
	<string name="change">跳转</string>
	<string name="default_page">0</string>
</resources>
